--- a/index.css
+++ b/index.css
@@ -1,11 +1,40 @@
-body {}
+@import url('https://fonts.googleapis.com/css2?family=Lemon&family=Rubik+Burned&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-image: url('https://images.unsplash.com/photo-1631264508765-b49496f3f45d?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NDR8fGZhZGVkJTIwd2hpdGV8ZW58MHx8MHx8fDA%3D');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+h1 {
+    font-family: 'Rubik Burned', system-ui;
+    text-align: center;
+    font-size:40px;
+    font-weight:600;
+}
 
 img {
     width: 200px;
     height: 200px;
-    margin-left: 10px;
+    margin-left: 20%;
+    padding-left: 10px
+}
+
+label {
+    margin: 8px;
+    margin-left: 40%;
 }
 
 #dog-breeds {
     display: none;
+    margin-left: 50%;
+}
+
+li {
+    cursor: pointer;
 }
